--- a/frontEnd/src/components/Container/Container.module.css
+++ b/frontEnd/src/components/Container/Container.module.css
@@ -10,9 +10,9 @@
 	  /* não aparece barra de rolagem */
 	
 	overflow: hidden;
-	padding-top: 68px;
-
-
+	padding-top: 52px;
+background-color: var(--colors);
+padding-bottom: 15px;
 	}
 	/* @media (max-width: 380px) {
 		.container{
