--- a/frontEnd/src/components/Footer/Footer.css
+++ b/frontEnd/src/components/Footer/Footer.css
@@ -1,21 +1,71 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 .footer {
-	/* position: absolute; */
-	/* bottom: 0; */
-	height: 60px;
 	width: 100%;
+	display: grid;
+
+	padding: 2rem;
+	background-color: var(--primaryColour);
+}
+
+
+  .h1{
+	font-weight: bold;
+	color: var(--backgroundColour);
+	margin-bottom: 20px;
+  }
+  .footer .col {
 	display: flex;
+	flex-direction: column;
+	
 	align-items: center;
-	justify-content: center;
-	background-color: gainsboro;
-	color: #b71c1c;
-	border-top: 2px solid #b71c1c;
-	padding-block: 0.5rem;
-}
+	
+  }
+  
+  .footer .bar {
+	/* width: 30px; */
 
-.footer h2 {
-	font-size: 1rem;
-	font-weight: 500;
-  margin-bottom: 0;
-}
+	 margin: 0.5rem 0 0 0 ; 
+	color:var(--backgroundColour);
+  }
+  .footer .col-2 {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	
+	
+  }
+  .footer a {
+	font-size: 16px;
+	/* font-weight: bold; */
+	color:var(--backgroundColour) ;
+	font-family: 'Roboto';
+font-weight: 700;
+/* margin-right: 10px; */
+  }
+  
 
+
+
+  
+
+  
+  @media screen and (max-width: 940px) {
+	.footer .container {
+		grid-template-columns: repeat(2,1fr);
+		text-align: center;
+	}
+  
+	.footer .col-1 {
+		display: none;
+	}
+  .footer .bar {
+	display: none;
+  }
+  .footer h5{
+	margin: 1rem 0;
+  }
+  
+  }
+  
 
