--- a/frontEnd/src/index.css
+++ b/frontEnd/src/index.css
@@ -1,3 +1,13 @@
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+:root {
+
+--backgroundColour:#ffffff;
+--primaryColour:#4f372f;
+--colors:#EEEEEE;
+--backgrouncarrinho:#F8F9FA;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -5,14 +15,15 @@
   }
   
   body {
-    font-family: 'Poppins', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
   
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
+      monospace ;
   }
   
   /* formatacao da barra de rolagem */
@@ -28,13 +39,30 @@
   body::-webkit-scrollbar-thumb {
     background-color: gainsboro;  /* cor do scroll (thumb) da barra de rolagem */
     border-radius: 20px;        /* arredondar o scroll (thumb) */
-    border: 2px solid #b71c1c;     /* criar um espaco em volta do scroll */
+    border: 2px solid #4f372f;     /* criar um espaco em volta do scroll */
   }
+  h1{
+    font-size: 24px;
+   
+  line-height: 29px;
+  color:#464646 ;
+  font-weight: 500;
+  letter-spacing: 0.5px;
   
-  a:link {
+  }
+  h2{
+    font-size: 16px;
+     line-height: 19px;
+    color:#121212 ;
+    font-weight: 500;
+    margin: 0;
+    font-family: "Roboto";
+      
+  }
+  /* a:link {
     text-decoration: none;
     color: unset
-  }
+  } */
 
 
  
