--- a/frontEnd/src/index.css
+++ b/frontEnd/src/index.css
@@ -46,9 +46,9 @@
    
   line-height: 29px;
   color:#464646 ;
-  font-weight: 500;
+  font-weight: 700;
   letter-spacing: 0.5px;
-  
+  margin: 0;
   }
   h2{
     font-size: 16px;
