--- a/frontEnd/src/components/Card/Card.css
+++ b/frontEnd/src/components/Card/Card.css
@@ -3,7 +3,7 @@
     width: 100%;
   }
   .h2{
-    margin:   0 0  5px 0;
+    margin-top: 5px ;
    
   }
   .lupa{
@@ -40,12 +40,12 @@
 .left{
   background-color: var(--backgroundColour);
   width: 600px;
- height:1071px ;
+ height:1120px ;
 padding: 0px 0px 24px 0px;
 box-shadow: rgba(0, 0, 0, 0.14) 0px 7px 29px 0px;
 
-overflow-y: overlay;
-overflow-x: auto;
+/* overflow-y: overlay;
+overflow-x: auto; */
 }
 /* barra de rolagem */
 .left::-webkit-scrollbar {
@@ -118,7 +118,7 @@ padding: 20px 16px 12px 16px;
     align-items: center;
     justify-content: space-between;
     padding: 16px;
-    height: 117px;
+    height: 127px;
 }
 
 
@@ -134,17 +134,17 @@ padding: 20px 16px 12px 16px;
 .menu-item-left{
   width: 424px;
   
-    
+    padding: 16px 0;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
-p,b{
+.description,b{
   font-weight: 300;
   color: var(--primaryColour);
 font-size: 16px;
 line-height: 19px;
-margin: 3px 0;
+margin: 5px 0;
 font-family: "Roboto";
 text-align: justify;
 width: 410px;
