--- a/frontEnd/src/components/Container/Container.module.css
+++ b/frontEnd/src/components/Container/Container.module.css
@@ -34,12 +34,12 @@ padding-bottom: 15px;
 	  }
 	    */
 	
- @media screen and (max-width: 1280px) {
+ /* @media screen and (max-width: 1280px) {
 		.container{
 			min-height: 91.9vh;
 		}
 	  } 
-	
+	 */
 	
 
 
