--- a/frontEnd/src/components/Footer/Footer.css
+++ b/frontEnd/src/components/Footer/Footer.css
@@ -32,7 +32,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
-	
+	margin: 10px  0 0 102px  ;
 	
   }
   .footer a {
@@ -50,21 +50,12 @@ font-weight: 700;
   
 
   
-  @media screen and (max-width: 940px) {
-	.footer .container {
-		grid-template-columns: repeat(2,1fr);
-		text-align: center;
-	}
-  
-	.footer .col-1 {
-		display: none;
-	}
-  .footer .bar {
-	display: none;
-  }
-  .footer h5{
-	margin: 1rem 0;
-  }
+  @media screen and (max-width: 393px) {
+ .FaInstagram{
+	margin-left: 50px;
+ }
+
+ 
   
   }
   
