--- a/frontEnd/src/components/Ler/Ler.css
+++ b/frontEnd/src/components/Ler/Ler.css
@@ -4,7 +4,7 @@
   /* background-size: cover; */
   /* background-position: center; */
   width: 100%;
-height: 120vh;
+/* height: 120vh; */
 /* position: fixed; */
 opacity: 65%;
 top:-50px;
@@ -12,7 +12,7 @@ z-index: 1;
 display: flex;
 align-items: center;
 justify-content: center;
-
+background-color: transparent;
 }
 
 
@@ -165,4 +165,28 @@ background-color: #4F372F;
 border-radius: 50%;
 color: #F8F9FA;
 cursor: pointer;
+}
+.description-pedido{
+  width: 363px;
+  text-align: justify;
+line-height: 19px;
+}
+@media (max-width: 393px) {
+  .opcao, .pedido,.detalhe-image,.image-1,.pedido-detalhe{
+    width: 383px;
+  }
+  .opcao-items,.btn-adicionar{
+    width: 353px;
+  }
+
+  .opcao-items-left{
+  
+    
+
+    width: 50px;
+}
+.quantidade{
+  margin-left: 100px;
+  margin-bottom: 5px;
+}
 }
