--- a/frontEnd/src/components/Card/Card.css
+++ b/frontEnd/src/components/Card/Card.css
@@ -29,7 +29,7 @@
 .menu{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  /* justify-content: center; */
+  justify-content: center;
   /* align-items: center; */
   padding: 3rem 1rem;
   background-color: #F8F9FA;
