--- a/frontEnd/src/components/Ler/Ler.css
+++ b/frontEnd/src/components/Ler/Ler.css
@@ -1,7 +1,7 @@
 .imagem-fundo {
 	 background-image: url(../../assets/cardapio.png); 
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
+  background-repeat: no-repeat;
+  background-size: cover;
   /* background-position: center; */
   width: 100%;
 /* height: 120vh; */
@@ -31,7 +31,7 @@ display: flex;
 flex-direction: column;
 box-shadow:  0 0 6px 0 rgba(0, 0, 0, 0.5);
 margin-top: 15px;
-top: 70px;
+/* top: 170px; */
 }
 .detalhe-image{
   height: 220px;
@@ -83,6 +83,8 @@ background-color:
 #F8F9FA;
 justify-content: center;
   /* padding: 16px 24px; */
+  /* margin-top: 5px; */
+  padding:  5px 0;
 }
 
 
@@ -93,7 +95,7 @@ justify-content: center;
   align-items: center;
   justify-content: space-between;
   /* padding: 16px; */
-  height: 72px;
+  height: 62px;
 
   width: 450px;
 }
@@ -167,9 +169,10 @@ color: #F8F9FA;
 cursor: pointer;
 }
 .description-pedido{
-  width: 363px;
+  width: 452px;
   text-align: justify;
 line-height: 19px;
+margin: 0;
 }
 @media (max-width: 393px) {
   .opcao, .pedido,.detalhe-image,.image-1,.pedido-detalhe{
@@ -188,5 +191,9 @@ line-height: 19px;
 .quantidade{
   margin-left: 100px;
   margin-bottom: 5px;
+}
+.description-pedido{
+  width: 345px;
+
 }
 }
