--- a/frontEnd/src/components/Container/Container.module.css
+++ b/frontEnd/src/components/Container/Container.module.css
@@ -13,7 +13,7 @@
 	padding-top: 52px;
 background-color: var(--colors);
 padding-bottom: 15px;
-
+/* display: flex; */
 	}
 	/* @media (max-width: 380px) {
 		.container{
