--- a/frontEnd/src/components/Card/Card.css
+++ b/frontEnd/src/components/Card/Card.css
@@ -41,7 +41,7 @@ margin-left: 45px;
 .left{
   background-color: var(--backgroundColour);
   width: 600px;
- height:1150px ;
+ height:1050px ;
 padding: 0px 0px 24px 0px;
 box-shadow: rgba(0, 0, 0, 0.14) 0px 7px 29px 0px;
 
@@ -63,84 +63,42 @@ overflow-x: auto; */
   border-radius: 20px;        /* arredondar o scroll (thumb) */
   border: 2px solid var(--primaryColour);     /* criar um espaco em volta do scroll */
 }
-
-
-.right{
-  background-color: var(--backgroundColour);
-  width: 320px;
- max-height:129px ;
-box-shadow: rgba(0, 0, 0, 0.15) 0px 7px 29px 0px;
-gap: 1px;
-border-radius: 5px 5px 0 0 ;
-}
-.carrinho{
-  background-color: var(--backgrouncarrinho);
-  width: 320px;
- height:64px ;
-padding: 16px 24px 16px 24px;
-border-radius: 5px 5px 0 0 ;
-display: flex;
-gap: 24px;
-}
-
-
-
-.item{
+.items{
   background-color: var(--backgroundColour);
   width: 320px;
  height:64px ;
 padding:  24px;
 display: flex;
 }
-.item-Rg{
-  font-size: 16px;
  
-line-height: 19px;
-color:#464646 ;
-font-weight: 400;
-height: 16px;
 
-
-}
   a:link {
     text-decoration: none;
-    color: unset
+    color: white
   }
   .menu-sections{
 display: flex;
 justify-content: space-between;
 padding: 20px 16px 12px 16px;
   }
-  .menu-item,.menu-item-drink {
+  .menu-item {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     padding: 16px;
     height: 127px;
-    /* border: none;
-    gap: 12px;
-    margin-bottom: 5px;
-    background-color: white; */
+ 
 }
-/* .menu-item-drink {
+
+.menu-item-drink {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding: 16px;
   height: 127px;
-} */
-/* .menu-item,.menu-item-drink {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 16px;
-    height: 127px;
-} */
-
-
+}
 .menu-item:hover, .menu-item-drink:hover{
   box-shadow: rgb(0 0 0 / 20%) 0px 8px 24px;
 }
@@ -177,7 +135,20 @@ b{
   width: 128px;
   height: 85px;
 }
+.nome{
+  display: flex;
+  align-items: center;
+}
+.cart-status{
 
+  color: #F8F9FA;
+  background-color: black;
+
+  margin-right: 10px;
+  border-radius: 20px;
+  width: 25px;
+  height: 25px;
+}
 @media (max-width: 393px) {
   .container{
     padding: 0;
@@ -202,11 +173,7 @@ b{
    
   }
   .description{width: 217px;}
-  .right {
-    display: none;
-    cursor: pointer;
 
-}
 .menu-item,.menu-item-drink {
 
 width: 361px;
