--- a/frontEnd/src/components/Card/Card.css
+++ b/frontEnd/src/components/Card/Card.css
@@ -1,94 +1,91 @@
-.titulo{
-    display: inline-block;
-    width: 100%;
-  }
-  .h2{
-    margin-top: 5px ;
-   
-  }
-  .lupa{
-   
-    /* float:right; */
-    margin:0px 0px 0px -40px;
-    cursor:pointer;
-    display: inline;
-    color: #8A94A4;
-  
-  }
-  .pesquisa{
-    width: 1024px;
-    padding: 10px 25px;
-    border: 1px solid #8A94A4;
-    border-radius: 8px;
-    font-size: 20px;
-    margin:  10px 0 ;
-    float: none;
+.titulo {
+  display: inline-block;
+  width: 100%;
+}
+.h2 {
+  margin-top: 5px;
+}
+.lupa {
+  /* float:right; */
+  margin: 0px 0px 0px -40px;
+  cursor: pointer;
+  display: inline;
+  color: #8a94a4;
+}
+.pesquisa {
+  width: 1024px;
+  padding: 10px 25px;
+  border: 1px solid #8a94a4;
+  border-radius: 8px;
+  font-size: 20px;
+  margin: 10px 0;
+  float: none;
   gap: 4px;
-  }
-  
-.menu{
+}
+
+.menu {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-content: center;
   /* align-items: center; */
   padding: 3rem 1rem;
-  background-color: #F8F9FA;
+  background-color: #f8f9fa;
   width: 1030px;
   gap: 24px;
-  Height: 1337px;
-margin-left: 45px;
+  height: 1337px;
+  margin-left: 45px;
 }
-.left{
+.left {
   background-color: var(--backgroundColour);
   width: 600px;
- height:1050px ;
-padding: 0px 0px 24px 0px;
-box-shadow: rgba(0, 0, 0, 0.14) 0px 7px 29px 0px;
+  height: 1050px;
+  padding: 0px 0px 24px 0px;
+  box-shadow: rgba(0, 0, 0, 0.14) 0px 7px 29px 0px;
 
-/* overflow-y: overlay;
+  /* overflow-y: overlay;
 overflow-x: auto; */
 }
 /* barra de rolagem */
 .left::-webkit-scrollbar {
-  width: 12px;                /* largura da barra de rolagem */
-
+  width: 12px; /* largura da barra de rolagem */
 }
 
 .left::-webkit-scrollbar-track {
-  background:var(--primaryColour);           /* cor de fundo da barra de rolagem */
+  background: var(--primaryColour); /* cor de fundo da barra de rolagem */
 }
 
 .left::-webkit-scrollbar-thumb {
-  background-color: var(--backgroundColour);  /* cor do scroll (thumb) da barra de rolagem */
-  border-radius: 20px;        /* arredondar o scroll (thumb) */
-  border: 2px solid var(--primaryColour);     /* criar um espaco em volta do scroll */
+  background-color: var(
+    --backgroundColour
+  ); /* cor do scroll (thumb) da barra de rolagem */
+  border-radius: 20px; /* arredondar o scroll (thumb) */
+  border: 2px solid var(--primaryColour); /* criar um espaco em volta do scroll */
 }
-.items{
+.items {
   background-color: var(--backgroundColour);
   width: 320px;
- height:64px ;
-padding:  24px;
-display: flex;
+  height: 64px;
+  padding: 24px;
+  display: flex;
 }
- 
 
-  a:link {
-    text-decoration: none;
-    color: white
-  }
-  .menu-sections{
-display: flex;
-justify-content: space-between;
-padding: 20px 16px 12px 16px;
-  }
-  .menu-item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 16px;
-    height: 127px;
- 
+a:link {
+  text-decoration: none;
+  color: white;
+}
+.menu-sections {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 16px 12px 16px;
+}
+.menu-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px;
+  height: 127px;
+  cursor: pointer;
 }
 
 .menu-item-drink {
@@ -98,50 +95,52 @@ padding: 20px 16px 12px 16px;
   justify-content: space-between;
   padding: 16px;
   height: 127px;
+  cursor: pointer;
 }
-.menu-item:hover, .menu-item-drink:hover{
+.menu-item:hover,
+.menu-item-drink:hover {
   box-shadow: rgb(0 0 0 / 20%) 0px 8px 24px;
 }
 .menu-item-drink {
-
   height: 77px;
 }
 
-
-.menu-item-left{
+.menu-item-left,
+.menu-item-left-drink {
   width: 424px;
-  
-    padding: 16px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+
+  padding: 16px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+ 
 }
-.description,b{
+.description,
+b {
   font-weight: 300;
   color: var(--primaryColour);
-font-size: 16px;
-line-height: 19px;
-margin: 5px 0;
-font-family: "Roboto";
-text-align: justify;
-width: 410px;
+  font-size: 16px;
+  line-height: 19px;
+  margin: 5px 0;
+  font-family: "Roboto";
+  text-align: justify;
+  width: 410px;
 }
-b{
- font-weight: bold; 
- gap: 8px;
+b {
+  font-weight: bold;
+  gap: 8px;
 }
-.menu-item  img {
-  border-radius:4px ;
+.menu-item img {
+  border-radius: 4px;
   width: 128px;
   height: 85px;
 }
-.nome{
+.nome {
   display: flex;
   align-items: center;
 }
-.cart-status{
-
-  color: #F8F9FA;
+.cart-status {
+  color: #f8f9fa;
   background-color: black;
 
   margin-right: 10px;
@@ -149,44 +148,80 @@ b{
   width: 25px;
   height: 25px;
 }
+
+
 @media (max-width: 393px) {
-  .container{
+  .menu {
+    display: flex;
+    width: 375px;
+    padding: 0;
+    box-shadow: none;
+    margin-left: 6px;
+
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 1850px;
+  }
+  .container {
     padding: 0;
     color: white;
   }
- 
-  .pesquisa{
+
+  .pesquisa {
+    width: 361px;
+  }
+  .left {
+    width: 370px;
+    padding: 0;
+    box-shadow: none;
+    margin-left: 6px;
+    height: 1337px;
+  }
+
+  .menu-item-left {
+    width: 235px;
+    height: 180px;
+  }
+  .description {
+    width: 217px;
+  }
+
+  .menu-item img {
+    width: 119px;
+    height: 95px;
+  }
+  .menu-item,
+  .menu-item-dessert {
+    width: 361px;
+    padding: 12px 0 12px 12px;
+    height: 190px;
+    /* margin-right: 30px; */
+  }
+
+  /* .menu-item-dessert-left{
+
+    width: 235px;
+    height: 110px;
+
+  } */
+  /* .menu-item{
+    height: 75px;
+   
+   } */
+  .menu-sections {
+    padding: 20px 16px 12px 12px;
+  }
+  .menu-item-drink {
+    height: 70px;
+  }
+  /* .menu-item-left-drink{
     width: 361px;
 
-  }
-  .menu,.left{
-    width: 375px;
- padding: 0;
- box-shadow: none;
- margin-left: 6px;
- height: 1337px;
-  }
-
-  .menu-item-left{
-    width: 235px;
-    /* height: 120px; */
-   
-  }
-  .description{width: 217px;}
-
-.menu-item,.menu-item-drink {
-
-width: 361px;
-padding: 12px;
-
-}
-   .menu-item{
-    height: 175px;
-   
-   }
-   .menu-sections{
-    padding:20px 16px 12px 12px;
-   }
+height: 40px;
+   } */
 }
 /* .button {
     background-color: #0275d8;
@@ -206,7 +241,3 @@ padding: 12px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 7px 0px;
     transform: scale(1.1);
 } */
-
-
-
-
