--- a/frontEnd/src/components/Cart/Cart.css
+++ b/frontEnd/src/components/Cart/Cart.css
@@ -4,12 +4,13 @@
 box-shadow: rgba(0, 0, 0, 0.15) 0px 7px 29px 0px;
 gap: 1px;
 border-radius: 5px 5px 0 0 ;
-height: 700px;
+/* height: 400px; */
 top: 0;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
 }
+
 .carrinho{
   background-color: var(--backgrouncarrinho);
   width: 320px;
@@ -22,22 +23,15 @@ gap: 24px;
 .cart-items {
   flex-grow: 1;
   overflow: auto;
-  
-  /* border-bottom: 1px solid #EEEEEE;
-  padding: 8px 0px 8px 0px;
- 
-  position: relative;
-
-  width: 320px; */
+}
+.cart-vazio{
+  height: 64px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 
-/* .cart-resume {
-  font-size: 1.8rem;
-  font-weight: 500;
-  padding: 35px 0 15px;
-  border-top: 1px solid #ddd;
-} */
 
 .subtotal{
   display: flex;
@@ -54,10 +48,99 @@ gap: 24px;
   align-items:flex-start;
 } 
 
+
+.cart-items-pedidos{
+  display: flex;
+  padding: 8px 16px 0;
+
+  flex-direction: column;
+
+
+  /* justify-content: space-between; */
+height: 75px;
+border-bottom: 1px solid #DDD;
+
+}
+
+.cart-items-pedido{
+  display: flex;
+  /* padding: 8px 0; */
+
+  flex-direction: row;
+
+/* margin-bottom: 10px; */
+  align-items: flex-start;
+  justify-content: space-between;
+height: 19px;
+gap: 10px;
+
+}
+
+
+.cart-item-price {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  font-family: "Roboto";
+  margin: 0;
+}
+
+.cart-quantidade{
+  display: flex;
+  align-items: center;
+  width: 143px;
+  height: 36px;
+  justify-content: start;
+  /* margin-left: 150px; */
+gap:16px;
+padding: 8px;
+
+}
+
+
+
+.FiPlus{
+border: 2px solid #4F372F;
+background-color: #4F372F;
+border-radius: 50%;
+color: #F8F9FA;
+cursor: pointer;
+}
+
+.cart-items-pedidos:last-child {
+  border-bottom: none;
+}
+/* .cart-item-image {
+  width: 70px;
+}
+
+.cart-item-title {
+  font-size: 0.85rem;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.5);
+  margin-bottom: 8px;
+} */
+
+
+
+
 @media (max-width: 393px) {
-  .right {
+  /* .right {
     display: none;
     cursor: pointer;
+
+} */
+
+.right{
+
+  width: 361px;
+box-shadow:none;
+height: 700px;
+
+}
+.carrinho{
+  width: 361px;
+ /* height:117px ; */
 
 }
 }
