--- a/frontEnd/src/components/CartItem/CartItem.css
+++ b/frontEnd/src/components/CartItem/CartItem.css
@@ -1,30 +1,26 @@
-.cart-items-pedidos{
+
+
+.cart-items-pedidos {
   display: flex;
   padding: 8px 16px 0;
 
   flex-direction: column;
 
-
-  /* justify-content: space-between; */
-height: 75px;
-border-bottom: 1px solid #DDD;
-
+  height: 75px;
+  border-bottom: 1px solid #ddd;
 }
 
-.cart-items-pedido{
+.cart-items-pedido {
   display: flex;
-  /* padding: 8px 0; */
+
 
   flex-direction: row;
 
-/* margin-bottom: 10px; */
   align-items: flex-start;
   justify-content: space-between;
-height: 19px;
-gap: 10px;
-
+  height: 19px;
+  gap: 10px;
 }
-
 
 .cart-item-price {
   font-size: 16px;
@@ -34,31 +30,29 @@ gap: 10px;
   margin: 0;
 }
 
-.cart-quantidade{
+.cart-quantidade {
   display: flex;
   align-items: center;
   width: 143px;
   height: 36px;
   justify-content: start;
-  /* margin-left: 150px; */
-gap:16px;
-padding: 8px;
 
+  gap: 16px;
+  padding: 8px;
 }
 
-
-
-.FiPlus{
-border: 2px solid #4F372F;
-background-color: #4F372F;
-border-radius: 50%;
-color: #F8F9FA;
-cursor: pointer;
+.FiPlus {
+  border: 2px solid #4f372f;
+  background-color: #4f372f;
+  border-radius: 50%;
+  color: #f8f9fa;
+  cursor: pointer;
 }
-
+/* tira a ultima borda */
 .cart-items-pedidos:last-child {
   border-bottom: none;
-}
+} 
+
 /* .cart-item-image {
   width: 70px;
 }
@@ -68,6 +62,4 @@ cursor: pointer;
   font-weight: 500;
   color: rgba(0, 0, 0, 0.5);
   margin-bottom: 8px;
-} */
-
-
+}
