--- a/frontEnd/src/components/Menu/Menu.css
+++ b/frontEnd/src/components/Menu/Menu.css
@@ -1,10 +1,18 @@
 .menu-pedido{
-  display: inline-flex;
+  /* display: ; */
   width: 600px;
   height: 150px;
   padding: 20px 0px 24px 16px;
   gap:12px;
-  
+
+
+
+
+
+  display: inline-flex;
+  /* justify-content: space-around; */
+  /* profundidade */
+
 }
 
 
@@ -14,6 +22,7 @@
   height: 146px;
   margin-left: 19px;
 cursor: pointer;
+
 }
 .menus:hover{
   box-shadow: rgb(0 0 0 / 20%) 0px 8px 24px;
