--- a/frontEnd/src/components/Container/Container.module.css
+++ b/frontEnd/src/components/Container/Container.module.css
@@ -15,6 +15,8 @@ background-color: var(--colors);
 padding-bottom: 15px;
 /* display: flex; */
 	}
+
+
 	/* @media (max-width: 380px) {
 		.container{
 			min-height: 91.4vh;
@@ -35,18 +37,19 @@ padding-bottom: 15px;
 	  }
 	    */
 	
- /* @media screen and (max-width: 1280px) {
+ /* @media screen and (min-width: 1280px) {
 		.container{
 			min-height: 91.9vh;
+			width: 1024px;
 		}
-	  } 
-	 */
+	  }  */
+	
 	
 
 
-	@media screen and (min-width:1920px) {
+	/* @media screen and (min-width:1920px) {
 		.container{
 			min-height: 94.7vh;
 		}
-		  }
+		  } */
 		
