--- a/frontEnd/src/components/Cart/Cart.css
+++ b/frontEnd/src/components/Cart/Cart.css
@@ -4,7 +4,7 @@
 box-shadow: rgba(0, 0, 0, 0.15) 0px 7px 29px 0px;
 gap: 1px;
 border-radius: 5px 5px 0 0 ;
-/* height: 400px; */
+/* height: 300px; */
 top: 0;
 display: flex;
 flex-direction: column;
@@ -124,7 +124,7 @@ cursor: pointer;
 
 
 
-@media (max-width: 393px) {
+@media (min-width: 393px) {
   /* .right {
     display: none;
     cursor: pointer;
@@ -135,7 +135,7 @@ cursor: pointer;
 
   width: 361px;
 box-shadow:none;
-height: 700px;
+
 
 }
 .carrinho{
@@ -145,5 +145,29 @@ height: 700px;
 }
 }
 
+@media (min-width: 480px) {
+  /* .right {
+    display: none;
+    cursor: pointer;
 
+} */
+
+.right{
+
+  width: 371px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 7px 29px 0px;
+
+}
+.carrinho{
+  width: 371px;
+}
+}
+@media (min-width: 768px) {
+
+  .right,.carrinho{
+
+    width: 250px;
+  
+  }
+}
 
