--- a/frontEnd/src/components/Ler/Ler.css
+++ b/frontEnd/src/components/Ler/Ler.css
@@ -1,38 +1,5 @@
-.imagem-fundo {
-	 background-image: url(../../assets/cardapio.png); 
-  background-repeat: no-repeat;
-  background-size: cover;
-  /* background-position: center; */
-  width: 100%;
-/* height: 120vh; */
-/* position: fixed; */
-opacity: 65%;
-top:-50px;
-z-index: 1;
-display: flex;
-align-items: center;
-justify-content: center;
-background-color: transparent;
-}
 
 
-
-
-
-/* imagem do fundo  */
- .pedido {
-  /* padding: 1rem; */
- background: white;
- /* text-align: center; */
- width: 480px;
- border-radius: 10px;
- height: 720px;
-display: flex;
-flex-direction: column;
-box-shadow:  0 0 6px 0 rgba(0, 0, 0, 0.5);
-margin-top: 15px;
-/* top: 170px; */
-}
 .detalhe-image{
   height: 220px;
   width: 480px;
@@ -51,28 +18,42 @@ margin-top: 15px;
 .icone-x{
  position: relative;
 z-index: 1;
+/* width: 34px; */
+border-radius: 50%;
+padding: 3px;
+margin-left: 10px;
+    margin-top: 10px;
+   border: none;
+   display: flex;
+  background-color:var(--colors)
 }
 
-.x{
+/* .x{
   width: 34px;
   padding: 5px;
   border-radius: 50%;
 margin-top: 10px;
 
     background-color:var(--colors)
-}
+} */
 
 .pedido-detalhe{
-height: 506px;
+/* height: 506px;
 width: 480px;
-padding: 16px;
-gap: 8px;
+
+ */
+padding: 12px;
 display: flex;
 flex-direction: column;
 align-items: flex-start;
-
+gap: 4px;
 }
-
+.description-pedido{
+  width: 452px;
+  text-align: justify;
+line-height: 19px;
+margin: 0;
+}
 .opcao{
   width: 460px;
   height: 58px;
@@ -174,18 +155,28 @@ border-radius: 50%;
 color: #F8F9FA;
 cursor: pointer;
 }
-.description-pedido{
-  width: 452px;
-  text-align: justify;
-line-height: 19px;
-margin: 0;
+
+@media (min-width: 375px) {
+  /* .Backgrobnd{
+    height: 820px;
+  } */
+ 
+.customStyles{
+
+   transform: translate(-42%, -50%);
+   top: 65%;
+   /* height: 70px; */
+
 }
-@media (max-width: 393px) {
-  .opcao, .pedido,.detalhe-image,.image-1,.pedido-detalhe{
-    width: 383px;
+.opcao{
+  width: 333px;
+}
+ 
+   .pedido,.detalhe-image,.image-1,.pedido-detalhe{
+    width: 353px;
   }
   .opcao-items,.btn-adicionar{
-    width: 353px;
+    width: 333px;
   }
 
   .opcao-items-left{
@@ -195,11 +186,66 @@ margin: 0;
     width: 50px;
 }
 .quantidade{
-  margin-left: 100px;
+  margin-left: 120px;
   margin-bottom: 5px;
 }
 .description-pedido{
-  width: 345px;
+  width: 325px;
 
 }
 }
+
+
+@media (min-width: 480px) {
+  .Backgrobnd{
+    height: 820px;
+  }
+ 
+.customStyles{
+
+   transform: translate(-40%, -70%);
+   /* top: 45%; */
+   /* height: 70px; */
+width: 420px;
+height: auto;
+}
+.pedido,.detalhe-image,.image-1,.pedido-detalhe{
+  /* width: 480px; */
+  width: 420px;
+}
+.opcao-items,.opcao,.description-pedido,.btn-adicionar{
+  width: 390px;
+
+}
+
+}
+ @media screen and (min-width: 768px) {
+  /* .Backgrobnd{
+    height: 820px;
+  } */
+  /* .customStyles{
+
+    transform: translate(-40%, -50%);
+    top: 41%;
+   
+ 
+ } */
+}
+
+@media screen and (min-width: 1024px) {
+ 
+}
+@media screen and (min-width: 1200px) {
+  .Backgrobnd{
+    height: 510px;
+  }
+  .customStyles{
+
+    /* transform: translate(-40%, -40%); */
+    /* top: 70%; */
+    /* height: 390px; */
+ 
+ }
+ 
+
+} 
